feat：网关代码初始化
